simplify build shell scripts. simplify python unittests