@@ -1,5 +1,5 @@
 #!/usr/bin/env bash
 
-FWDIR="$(cd "`dirname "$0"`"/..; pwd)"
+CRDIR="$(cd "`dirname "$0"`"; pwd)"
 
-MAVEN_OPTS="-Xmx4g -XX:MaxPermSize=4g -XX:ReservedCodeCacheSize=512m" mvn clean install -DskipTests=true "$@" -f "$FWDIR"
+exec "$CRDIR"/test-install.sh -DskipTests=true "$@"
